mysql-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: webapp-sql
    tier: backend
  ports:
  - protocol: "TCP"
    port: 3306
    targetPort: 3306
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqldb
  labels:
    app: webapp-sql
    tier: backend
spec:
  selector:
    matchLabels:
      app: webapp-sql
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: webapp-sql
        tier: backend
    spec:
      containers:
      - image: torresglz/mysql:v1
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
