ingress.yaml
apiVersion: networking.k8s.io/v1 #v1beta1 no usado
kind: Ingress
metadata:
  name: ingress-apache
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.jtorres.com
    http:
      paths:
      - backend:
          service:
            name: apache
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
